# libmrio

./: .gitignore  .gitmodules  .zenodo.json  CMakeLists.txt  LICENSE  README.md  csv-parser.h  helpers.cmake  libmrio.cmake  makefile  progressbar.h  settingsnode.cmake
cmake/: git_version.cmake  helpers.cmake
examples/simple/: proxies.csv  settings.csv  settings.yml
include/: Disaggregation.h  MRIOIndexSet.h  MRIOTable.h  ProxyData.h  disaggregation.h  settingsnode.h
lib/cpp-library/: csv-parser.h  nvector.h  progressbar.h
lib/settingsnode/: LICENSE
src/: Disaggregation.cpp  MRIOIndexSet.cpp  MRIOTable.cpp  ProxyData.cpp  disaggregation.cpp  main.cpp
tests/: run_test.sh
tests/imperfect_mapping/: correct_data.csv  indices.csv  mapping.csv  proxy.csv  settings.yml
tests/imperfect_mapping2/: correct_data.csv  correct_indices.csv  mapping.csv  proxy.csv
tests/mapping/: correct_data.csv  correct_indices.csv  indices.csv  mapping.csv  proxy.csv  settings.yml
tests/simple/: correct_data.csv  correct_indices.csv  proxy.csv  settings.yml
